feat: Enhance navigation and scrolling experience
Introduce smoother scrolling for anchor links, allowing for better section targeting and a more polished user experience. Adjust the navbar's scroll spy logic to accommodate the new scroll padding, ensuring accurate active section highlighting. Update the main app layout to apply a default background and text color, and adjust the order of sections for improved content flow.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       }
     </script>
     <style>
+      html {
+        scroll-padding-top: 100px; /* Offset for fixed navbar */
+      }
       body {
         font-family: 'Inter', sans-serif;
         background-color: #0A0A0A;
